Remove x86 specific build and allow cross-platform images
-the cost is resulting image size is 30% larger